# GodotCUDA

./: .clang-format  README.md  SCsub  godot_cuda.cpp  godot_cuda.h  icon.svg.import  project.godot  register_types.cpp  register_types.h
cuda_test_library/: .gitignore  CMakeLists.txt  cuda_example.cu  cuda_example.h  cuda_plugin.exp  cuda_plugin.lib
